FIxing css, alignment and Removing SVGPath

--- a/src/main/resources/com/example/pupsis_main_dashboard/css/PickRole.css
+++ b/src/main/resources/com/example/pupsis_main_dashboard/css/PickRole.css
@@ -19,7 +19,6 @@
     -fx-font-size: 25px;
     -fx-text-fill: rgb(0, 0, 0);
     -fx-font-weight: bold;
-    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 2, 0.5, 1, 1);
 }
 
 .role-button {
